# Interdependence-of-Ruble-and-Yuan-Borrowing-rates

./: IMF_dataset_1.csv  README.md  bond_rates_database.db  config.py  data_pipeline.py  government_bond_index_monthly.csv  main.ipynb  pyproject.toml  requirements.txt  scheduler.py  statistical_analysis.ipynb  test_fetchers.py  yield_forecasting.ipynb
data/processed/: demo_run_manifest.json  ml_backtest_summary.csv  ml_signals.csv  ml_signals_diagnostics.csv  ml_signals_snapshot.csv  portfolio_backtest_summary.csv  signals_latest.csv  signals_latest_diagnostics.csv  signals_latest_snapshot.csv
docs/: DATA_SOURCES.md  DATA_SPEC.md  DATA_STATUS_AND_PLAN.md
notebooks/: 00_cache_and_run_control.ipynb  01_data_and_statistics_demo.ipynb  02_forecasting_and_spreads_demo.ipynb  03_signals_demo_classical_vs_ml.ipynb  04_portfolio_and_risk_demo.ipynb  05_profit_demo.ipynb  99_full_pipeline_dashboard.ipynb
project report/: coursework.tex  refs.bib  title_kr.tex
project report/tables/: tab_5_1_descriptive.tex  tab_5_2_adf.tex  tab_5_3_coint.tex  tab_5_4_granger.tex  tab_5_5_var.tex  (+21 more)
ruble_yuan_rates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_artifact_schema.py  check_data_status.py  export_report_data.py  run_advanced_comparison.py  run_analysis.py  run_ml_backtest.py  run_ml_signals.py  run_model_comparison.py  run_pipeline.py  run_portfolio_backtest.py  run_regime_backtest.py  run_regime_labels.py  run_scheduler.py  run_signals.py  run_unified_backtest.py  run_weekly_update.py  run_yield_forecasting.py
src/: database.py
tests/: test_fetchers.py
(+43 files in other folders)
