[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruble-yuan-rates"
version = "0.1.0"
description = "Ruble and Yuan borrowing rates analysis"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "akshare>=1.10.0",
    "fredapi>=0.5.0",
    "sqlalchemy>=2.0.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
